k8s/production/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mybitcoin-api
  labels:
    app: mybitcoin-api
spec:
  revisionHistoryLimit: 2
  replicas: 1
  selector:
    matchLabels:
      app: mybitcoin-api
  template:
    metadata:
      labels:
        app: mybitcoin-api
    spec:
      containers:
        - name: mybitcoin-api
          image: paulohsv/mybitcoin-api:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 3000
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          startupProbe:
            httpGet:
              path: /
              port: 3000
            failureThreshold: 30
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            periodSeconds: 15
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            periodSeconds: 10
