k8s/production/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mybitcoin-api
  labels:
    app: mybitcoin-api
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 3000
      protocol: TCP
  selector:
    app: mybitcoin-api
